@@ -34,6 +34,7 @@ t/hostname.t
 t/libnet_t.pl
 t/netrc.t
 t/nntp.t
+t/pod.t
 t/require.t
 t/smtp.t
 t/smtp_ssl.t
